--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/input.css -o ./src/main.css",
-    "watch": "tailwindcss -i ./src/input.css -o ./src/main.css --watch"
+    "build": "tailwindcss -i ./input.css -o ./main.css",
+    "watch": "tailwindcss -i ./input.css -o ./main.css --watch"
   },
   "keywords": [],
   "author": "",
